# evtype

./: Cargo.toml  README.md  evtype.service  flake.nix
.github/workflows/: ci.yml  release.yml
nix/: module.nix  overlay.nix  package.nix
src/: client.rs  common.rs  daemon.rs  keyboard.rs
