[package]
name = "evtype"
version = "0.1.0"
authors = ["Robin Appelman <robin@icewind.nl>"]
edition = "2018"

[[bin]]
name = "evtype_daemon"
path = "src/daemon.rs"

[[bin]]
name = "evtype"
path = "src/client.rs"

[dependencies]
evdev = { git = "https://github.com/myfreeweb/evdev", branch = "uinput" }
serde = { version = "1.0", features = ["derive"] }
keycode = "0.3.0"
nix = "0.9.0"
err-derive = "0.2.3"
dirs = "2.0.2"
main_error = "0.1.0"
ctrlc = "3.1.4"