[package]
name = "evtype"
version = "0.2.0"
authors = ["Robin Appelman <robin@icewind.nl>"]
edition = "2018"
rust-version = "1.69.0"

[[bin]]
name = "evtype_daemon"
path = "src/daemon.rs"

[[bin]]
name = "evtype"
path = "src/client.rs"

[dependencies]
evdev = "0.12.2"
main_error = "0.1.2"
ctrlc = "3.4.4"